--- a/testing/mocks/sling-mock/pom.xml
+++ b/testing/mocks/sling-mock/pom.xml
@@ -81,13 +81,13 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.api</artifactId>
-            <version>2.4.0</version>
+            <version>2.8.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.resourceresolver</artifactId>
-            <version>1.1.0</version>
+            <version>1.1.11-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -99,7 +99,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.jcr.resource</artifactId>
-            <version>2.3.6</version>
+            <version>2.4.3-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
