--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,7 @@
         <module>bundles/jcr/jackrabbit-accessmanager</module>
         <module>bundles/jcr/jcr-wrapper</module>
         <module>bundles/jcr/resource</module>
+        <module>bundles/jcr/it-resource-versioning</module>
         <module>bundles/jcr/registration</module>
         <module>bundles/jcr/webdav</module>
         <module>bundles/jcr/davex</module>
