--- a/contrib/launchpad/karaf/org.apache.sling.launchpad.karaf-integration-tests/pom.xml
+++ b/contrib/launchpad/karaf/org.apache.sling.launchpad.karaf-integration-tests/pom.xml
@@ -158,6 +158,11 @@
                 </goals>
               </execution>
             </executions>
+            <configuration>
+              <excludes>
+                <exclude>**/SlingExtensionUrlrewriterIT.class</exclude>
+              </excludes>
+            </configuration>
           </plugin>
         </plugins>
       </build>
