--- a/bundles/api/pom.xml
+++ b/bundles/api/pom.xml
@@ -71,6 +71,12 @@
             <scope>provided</scope>
         </dependency>
         
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>3.0.0</version>
+            <scope>provided</scope>
+        </dependency>
         <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
