--- a/bundles/api/pom.xml
+++ b/bundles/api/pom.xml
@@ -51,6 +51,7 @@
 
     <properties>
         <site.jira.version.id>12314252</site.jira.version.id>
+        <sling.java.version>6</sling.java.version>
     </properties>
 
     <dependencies>
@@ -96,6 +97,13 @@
 
     <build>
         <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
             <!-- Create the bundle of the Sling API -->
             <plugin>
                 <groupId>org.apache.felix</groupId>
