--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
     <properties>
         <site.jira.version.id>12314286</site.jira.version.id>
         <site.javadoc.exclude>**.internal.**</site.javadoc.exclude>
+        <sling.java.version>6</sling.java.version>
     </properties>
 
     <build>
