--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
     <dependency>
       <groupId>org.apache.sling</groupId>
       <artifactId>org.apache.sling.scripting.core</artifactId>
-      <version>2.0.29-SNAPSHOT</version>
+      <version>2.0.28</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
