--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -116,6 +116,7 @@
           <module>extensions/sling-query</module>
           <module>extensions/superimposing</module>
           <module>extensions/tenant</module>
+          <module>extensions/urlrewriter</module>
           <module>extensions/validation</module>
           <module>extensions/xss</module>
           <module>jcr/compiler</module>
