--- a/bundles/extensions/healthcheck/webconsole/pom.xml
+++ b/bundles/extensions/healthcheck/webconsole/pom.xml
@@ -58,7 +58,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.hc.core</artifactId>
-            <version>1.2.0</version>
+            <version>1.2.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
